<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/kind_profile_background">

    <TextView
        android:text="@string/title_kinder_info"
        style="@style/TabTitleText"/>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:text="@string/title_name"
                android:textSize="14.0sp"/>
            <EditText
                android:id="@+id/name"
                style="@style/EditTextStyle"/>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="10dp">
            <TextView
                android:id="@+id/geschlecht"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:text="@string/title_geschlecht"
                android:textSize="14.0sp"/>

            <RadioGroup
                android:id="@+id/radiogroup_geschlecht"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_gravity="left|center_vertical"
                android:orientation="horizontal"
                android:checkedButton="@+id/button_1">
                <RadioButton
                    android:id="@+id/maleCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/geschlecht_m"/>
                <RadioButton
                    android:id="@+id/femaleCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5.0px"
                    android:checked="false"
                    android:text="@string/geschlecht_w" />
            </RadioGroup>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:text="@string/title_geburtsdatum"
                android:textSize="14.0sp"/>

            <EditText
                android:id="@+id/geburtsdatum"
                style="@style/EditTextStyle"/>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:text="@string/title_geburtsgewicht"
                android:textSize="14.0sp"/>
            <EditText
                android:id="@+id/geburtsgewicht"
                android:numeric="decimal"
                style="@style/EditTextStyle"/>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:text="@string/title_geburt"
                android:textSize="14.0sp"/>
            <EditText
                android:id="@+id/geburt"
                android:numeric="decimal"
                style="@style/EditTextStyle"/>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:text="@string/title_ssw"
                android:textSize="14.0sp"/>
            <EditText
                android:id="@+id/ssw"
                android:numeric="decimal"
                style="@style/EditTextStyle"/>
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="right" >

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/btn_save"
            android:textAllCaps="false"
            android:textColor="@color/lightgray"/>
    </LinearLayout>

</LinearLayout>