<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TextView
        android:text="@string/title_settings"
        style="@style/TabTitleText"/>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="1.0px"
        android:background="@drawable/public_slip" />

    <Button
        android:id="@+id/title_app_settings"
        android:text="@string/btn_app_settings"
        style="@style/ArrowButton"/>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="1.0px"
        android:background="@drawable/public_slip" />

    <Button
        android:id="@+id/title_weight_settings"
        android:text="@string/btn_weight_settings"
        style="@style/ArrowButton"/>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="1.0px"
        android:background="@drawable/public_slip" />

</LinearLayout>