<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TextView
        android:text="@string/tab_title_settings"
        style="@style/TabTitleText"/>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="1.0px"
        android:background="@drawable/public_slip" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_waage_icon"/>
            <ToggleButton
                android:layout_marginLeft="70dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/toggle_btn_waage"
                android:textOn="@string/toggle_turn_on"
                android:textOff="@string/toggle_turn_off"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_thermometer_icon"/>
            <ToggleButton
                android:layout_marginLeft="70dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/toggle_btn_thermometer"
                android:textOn="@string/toggle_turn_on"
                android:textOff="@string/toggle_turn_off"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_medikament"/>
            <ToggleButton
                android:layout_marginLeft="70dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/toggle_btn_medikament"
                android:textOn="@string/toggle_turn_on"
                android:textOff="@string/toggle_turn_off"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_babyflasche_2"/>
            <ToggleButton
                android:layout_marginLeft="70dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/toggle_btn_babyflasche"
                android:textOn="@string/toggle_turn_on"
                android:textOff="@string/toggle_turn_off"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_spritze"/>
            <ToggleButton
                android:layout_marginLeft="70dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/toggle_btn_spritze"
                android:textOn="@string/toggle_turn_on"
                android:textOff="@string/toggle_turn_off"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_schlafmuetze"/>
            <ToggleButton
                android:layout_marginLeft="70dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/toggle_btn_schlafmuetze"
                android:textOn="@string/toggle_turn_on"
                android:textOff="@string/toggle_turn_off"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_planning"
                android:clickable="false" />
            <ToggleButton
                android:layout_marginLeft="70dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/toggle_btn_planning"
                android:textOn="@string/toggle_turn_on"
                android:textOff="@string/toggle_turn_off"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_foto_icon"/>
            <ToggleButton
                android:layout_marginLeft="70dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/toggle_btn_foto"
                android:textOn="@string/toggle_turn_on"
                android:textOff="@string/toggle_turn_off"/>
        </TableRow>
    </TableLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="1.0px"
        android:background="@drawable/public_slip" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="right" >

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/btn_save"
            android:textAllCaps="false"
            android:textColor="@color/lightgray"/>
    </LinearLayout>

</LinearLayout>